k3s-userapps/money/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actualbudget
  namespace: actualbudget
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/pod: actualbudget
  template:
    metadata:
      labels:
        app.kubernetes.io/pod: actualbudget
    spec:
      volumes:
        - name: actualbudget
          persistentVolumeClaim:
            claimName: actualbudget
      containers:
        - image: 'actualbudget/actual-server:24.11.0'
          imagePullPolicy: IfNotPresent
          name: actualbudget
          ports:
            - containerPort: 5006
              protocol: TCP
              name: "http"
          volumeMounts:
            - mountPath: /data
              name: actualbudget
