k3s-userapps/money/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: actualbudget
  namespace: actualbudget
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5006
  - name: api
    port: 5007
    protocol: TCP
    targetPort: 5007
  selector:
    app.kubernetes.io/pod: actualbudget
  type: ClusterIP
