k3s-userapps/money/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: acme-issuer
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://money.kirillorlov.pro"
    gethomepage.dev/group: Apps
    gethomepage.dev/name: ActualBudget
    gethomepage.dev/icon: "https://avatars.githubusercontent.com/u/37879538?s=128&v=4"
    gethomepage.dev/pod-selector: "app.kubernetes.io/pod=actualbudget"
  name: actualbudget
  namespace: actualbudget
spec:
  rules:
  - host: money.kirillorlov.pro
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: actualbudget
              port:
                name: http
  tls:
  - hosts:
    - money.kirillorlov.pro
    secretName: actualbudget-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: acme-issuer
  name: actualbudget-api
  namespace: actualbudget
spec:
  rules:
  - host: money-api.kirillorlov.pro
    http:
      paths:
        - path: /metrics
          pathType: Prefix
          backend:
            service:
              name: actualbudget-metrics
              port:
                name: metrics
        - path: /
          pathType: Prefix
          backend:
            service:
              name: actualbudget-api
              port:
                name: api
  tls:
  - hosts:
    - money-api.kirillorlov.pro
    secretName: actualbudget-api-tls
